OK-318 Lokaali ympäristö käyttäen hahtuva-datalähteitä